syntax = "proto3";

option java_multiple_files = true;
option java_package = "bikes.grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service Bikes {
  rpc GetAllStream (google.protobuf.Empty) returns (stream Bike);
  rpc GetAll (google.protobuf.Empty) returns (BikeList);

  rpc GetByLocationStream (google.protobuf.StringValue) returns (stream Bike);
  rpc GetByLocation (google.protobuf.StringValue) returns (BikeList);

  rpc GetById (google.protobuf.Int32Value) returns (Bike);
  rpc UpdateById (BikeRequest) returns (Bike);
  rpc Create (BikeRequest) returns (Bike);
  rpc UpdateRatingById (BikeUpdateRatingRequest) returns (Bike);

  rpc DeleteById (google.protobuf.Int32Value) returns (google.protobuf.Empty);
  rpc DeleteAll (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc DeleteByLocation (google.protobuf.StringValue) returns (google.protobuf.Empty);
}

message BikeUpdateRatingRequest{
  int32 id = 1;
  double rating = 2;
}

message BikeRequest{
  int32 id = 1;
  string locationId = 2;
  string name = 3;
}

message Bike{
  int32 id = 1;
  string locationId = 2;
  string name = 3;
  double rating = 4;
  int32 ratingCount = 5;
  double timeTravelled = 6;
  int32 rentCount = 7;
}

message BikeList {
  repeated Bike bikes = 1;
}
